<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <item
        android:id="@+id/action_informations"
        app:showAsAction="never"
        android:title="@string/menu_informations"/>
    <item
        android:id="@+id/action_espaces"
        app:showAsAction="never"
        android:title="@string/menu_espaces"/>
    <item
        android:id="@+id/action_indicateurs"
        app:showAsAction="never"
        android:title="@string/menu_indicateurs"/>
    <item
        android:id="@+id/action_accueil"
        app:showAsAction="never"
        android:title="@string/menu_accueil"/>
    <item
        android:id="@+id/action_deconnecter"
        app:showAsAction="never"
        android:title="@string/menu_deconnecter"/>
</menu>
